--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "start": "tsx index.ts"
   },
   "dependencies": {
-    "puppeteer": "^21.5.1",
-    "tsx": "4.0.0"
+    "puppeteer": "^21.5.1"
   },
   "devDependencies": {
+    "tsx": "4.0.0",
     "typescript": "^5.2.2"
   }
 }
